Layout updated to use correct font, spacing, images

--- a/src/components/contentsection/content-section.css
+++ b/src/components/contentsection/content-section.css
@@ -1,13 +1,13 @@
 
 .cs-wrapper {
     display: grid;
-    grid-template-columns: repeat(14, 70px);
+    grid-template-columns: 1fr repeat(14, 70px) 1fr;
     grid-gap: 30px;
     padding: 30px 0;
 }
 
 .Content-Section {
-    grid-column: 4 / 12;
+    grid-column: 5 / 13;
 }
 
 .Content-Section > span {
@@ -31,6 +31,5 @@
 }
 
 .invert {
-    background-color: #151515;
     color: white;
 }
