--- a/src/components/testimonial/testimonial.css
+++ b/src/components/testimonial/testimonial.css
@@ -1,13 +1,13 @@
 .testimonial-wrapper {
     display: grid;
-    grid-template-columns: repeat(14, 70px);
+    grid-template-columns: 1fr repeat(14, 70px) 1fr;
     grid-gap: 30px;
     padding: 30px 0;
     background: linear-gradient(0deg, #0F1E65 0%, #04104A 100%);
 }
 
 .Testimonial {
-    grid-column: 4 / 12;
+    grid-column: 5 / 13;
     color: white;
 }
 
